# facial_recognition

./: README.md  config.py  drawing.py  emotion_detector.py  face_recognizer.py  main.py  pipeline.py  pyproject.toml
