[project]
name = "facial-regconition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.9.0",
    "face-recognition>=1.3.0",
    "numpy>=1.26.0",
    "deepface>=0.0.90",
    "tf-keras>=2.21.0",
    "face-recognition-models",
    "setuptools<71.0",
]
